--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Gilroy';
+    src: url('public\Gilroy-Black.ttf') format('truetype'); /* Adjust path */
+  }
+  
+  body {
+    font-family: 'Gilroy', sans-serif;
+  }
